# Sprout_lang

./: .gitignore  CMakeLists.txt  README.md  Sprout_lang.ebnf  Sprout_lang_EBNF.txt
src/: main.cpp
src/compiler/: compiler.cpp  lexer.cpp  lexer.h  memManager.cpp  memManager.h  parser.cpp  parser.h
src/shared/: bytecode_format.h  opcodes.h  values.h
src/vm/: Heap.cpp  Heap.h  bytecode.cpp  bytecode.h  decode.cpp  decode.h  execution.cpp  execution.h  heap.cpp  heap.h  vm.cpp  vm.h
tests/asm_source/: array_test.asm  chudnovsky.asm  collatz.asm  euler.asm  factorial.asm  fib-optimized.asm  matmul.asm  print_sprout.asm
tests/hand_assembled/: array_test.spbt  chudnovsky.spbt  collatz.spbt  euler.spbt  fib-optimized.spbt  fibonacci.spbt  matmul.spbt  print_sprout.spbt
tools/assembler/: assembler.py
